--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
        <nav class="header__nav">
             <i><img src="../Together/css/assets/Iconos/icons8-menú-30.png" alt="IconMenu" class="nav__icon"></i>
             <a href="../Together/index__login/index__login.html" class="nav__menu1">Sign-In</a>
-            <a href="" class="nav__menu1">Log-In</a>
+            <a href="" class="nav__menu1">Log-in</a>
             <a href="" class="nav__menu1">Search</a>
-            <a href="" class="nav__menu1">Contact</a>
+            <a href="" class="nav__menu1">Contact Us</a>
             <i><img src="../Together/css/assets/Iconos/icons8-nike-an-american-multinational-corporation---footwear,-apparel,-equipment,-accessories,-and-services-96.png" alt="iconMenu" class="nav__icon nav__icon--logo"></i>
             <a href="" class="nav__menu2">Categories</a>
             <a href="" class="nav__menu2">Offers</a>
@@ -33,9 +33,9 @@
             
         </section>
         <section> 
-            <DIV></DIV>
+            <div></div>
             <a href="" class="banner__title">New Products!</a>
-            <button class="banner__btn">Get the News!</button>
+            <button class="banner__btn">Get the New Ones!</button>
         </section>
         </section>
 
