--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
        <nav class="header__nav">
             <i><img src="../Together/css/assets/Iconos/icons8-menú-30.png" alt="IconMenu" class="nav__icon"></i>
             <a href="../Together/index__login/index__login.html" class="nav__menu1">Sign-In</a>
-            <a href="" class="nav__menu1">Log-In</a>
+            <a href="" class="nav__menu1">Log-in</a>
             <a href="" class="nav__menu1">Search</a>
             <a href="" class="nav__menu1">Contact</a>
             <i><img src="../Together/css/assets/Iconos/icons8-nike-an-american-multinational-corporation---footwear,-apparel,-equipment,-accessories,-and-services-96.png" alt="iconMenu" class="nav__icon nav__icon--logo"></i>
