--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 <body>
     <header class="header">
        <nav class="header__nav">
-            <i><img src="../Together/css/assets/Iconos/icons8-menú-30.png" alt="IconMenu" class="nav__icon"></i>
-            <a href="../Together/index__login/index__login.html" class="nav__menu1">Sign-In</a>
-            <a href="" class="nav__menu1">Log-in</a>
-            <a href="" class="nav__menu1">Search</a>
-            <a href="" class="nav__menu1">Contact Us</a>
-            <i><img src="../Together/css/assets/Iconos/icons8-nike-an-american-multinational-corporation---footwear,-apparel,-equipment,-accessories,-and-services-96.png" alt="iconMenu" class="nav__icon nav__icon--logo"></i>
-            <a href="" class="nav__menu2">Categories</a>
-            <a href="" class="nav__menu2">Offers</a>
-            <a href="" class="nav__menu2">Historial</a>
-            <a href="" class="nav__menu2">Market</a>
-            <i><img src="../Together/css/assets/Iconos/icons8-carrito-de-compras-64.png" alt="carrito" class="nav__icon"></i>
+            <i><img src="css/assets/Iconos/icons8-menú-30.png" alt="IconMenu" class="nav__icon"></i>
+            <a href="index__login/index__login.html" class="nav__menu1">Sign-In</a>
+            <a href="#" class="nav__menu1">Login</a>
+            <a href="#" class="nav__menu1">Search</a>
+            <a href="#" class="nav__menu1">Contact</a>
+            <i><img src="css/assets/Iconos/icons8-nike-an-american-multinational-corporation---footwear,-apparel,-equipment,-accessories,-and-services-96.png" alt="iconMenu" class="nav__icon nav__icon--logo"></i>
+            <a href="#" class="nav__menu2">Categories</a>
+            <a href="#" class="nav__menu2">Offers</a>
+            <a href="#" class="nav__menu2">Historial</a>
+            <a href="#" class="nav__menu2">Market</a>
+            <i><img src="css/assets/Iconos/icons8-carrito-de-compras-64.png" alt="carrito" class="nav__icon"></i>
             </ul>  
         </nav>
     </header>
@@ -138,7 +138,7 @@
            
             <div class="cart__article">
                 <h2 class="cart__title">Carrito</h2>
-                <img class="cart__img" src="../Together/css/assets/Products/chamarra.jpg" alt="" />
+                <img class="cart__img" src="css/assets/Products/chamarra.jpg" alt="" />
                 <p class="cart__price-size">$3,000.00</p>
                 <p class="cart__articlename">Chamarra</p>
                 <i class="cart__deleteIcon"><img src="../Together/css/assets/Iconos/borrar.png" class="delete-icon" /></i>
