--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
 
         <section class="Products">
             <article class="Products__articles">
-            <img src="../Together/css/assets/Products/chamarra.jpg" alt="chamarra" class="articles__img">
+            <img src="css/assets/Products/chamarra.jpg" alt="chamarra" class="articles__img">
             <h2 class="articles__title" >Chamarra Deportiva Nike</h2>
             <p class="articles__price">3,000.00 USD</p>
             <button class="articles_btn">Agregar al carrito</button>
             </article>
 
             <article class="Products__articles">
-                <img src="../Together/css/assets/Products/playera-adidas.jpg" alt="playera-adidas" class="articles__img">
+                <img src="css/assets/Products/playera-adidas.jpg" alt="playera-adidas" class="articles__img">
                 <h2 class="articles__title">Playera Deportiva Adidas</h2>
                 <p class="articles__price">1,000.00 USD</p>
                <div>
@@ -57,63 +57,63 @@
             </article>
 
             <article class="Products__articles">
-                <img src="../Together/css/assets/Products/playera-lacoste.jpg" alt="playera-lacoste" class="articles__img">
+                <img src="css/assets/Products/playera-lacoste.jpg" alt="playera-lacoste" class="articles__img">
                 <h2 class="articles__title">Playera Deportiva Lacoste</h2>
                 <p class="articles__price">5,000.00 USD</p>
                 <button class="articles_btn">Agregar al carrito</button>
             </article>
 
             <article class="Products__articles">
-                <img src="../Together/css/assets/Products/playera-puma.jpg" alt="playera-puma" class="articles__img">
+                <img src="css/assets/Products/playera-puma.jpg" alt="playera-puma" class="articles__img">
                 <h2 class="articles__title">Playera Puma</h2>
                 <p class="articles__price">500.00 USD</p>
                 <button class="articles_btn">Agregar al carrito</button>
             </article>
 
             <article class="Products__articles">
-                <img src="../Together/css/assets/Products/tenis-adidas.jpg" alt="tennis-adidas" class="articles__img">
+                <img src="css/assets/Products/tenis-adidas.jpg" alt="tennis-adidas" class="articles__img">
                 <h2 class="articles__title">Playera Puma</h2>
                 <p class="articles__price">500.00 USD</p>
                 <button class="articles_btn">Agregar al carrito</button>
             </article>
 
             <article class="Products__articles">
-                <img src="../Together/css/assets/Products/tenis-lacoste.avif" alt="tennis-lacoste" class="articles__img">
+                <img src="css/assets/Products/tenis-lacoste.avif" alt="tennis-lacoste" class="articles__img">
                 <h2 class="articles__title">Tenis Adidas</h2>
                 <p class="articles__price">2,500.00</p>
                 <button class="articles_btn">Agregar al carrito</button>
             </article>
 
             <article class="Products__articles">
-                <img src="../Together/css/assets/Products/tenis-puma.avif" alt="tenis-puma" class="articles__img">
+                <img src="css/assets/Products/tenis-puma.avif" alt="tenis-puma" class="articles__img">
                 <h2 class="articles__title">Tenis Lacoste</h2>
                 <p class="articles__price">500.00 USD</p>
                 <button class="articles_btn">Agregar al carrito</button>
             </article>
 
             <article class="Products__articles">
-                <img src="../Together/css/assets/Products/playera-puma.jpg" alt="playera-puma" class="articles__img">
+                <img src="css/assets/Products/playera-puma.jpg" alt="playera-puma" class="articles__img">
                 <h2 class="articles__title">Tenis Puma</h2>
                 <p class="articles__price">500.00 USD</p>
                 <button class="articles_btn">Agregar al carrito</button>
             </article>
 
             <article class="Products__articles">
-                <img src="../Together/css/assets/Products/nike23.jfif" alt="Tenisnike23" class="articles__img">
+                <img src="css/assets/Products/nike23.jfif" alt="Tenisnike23" class="articles__img">
                 <h2 class="articles__title">Tenis N23</h2>
                 <p class="articles__price">500.00 USD</p>
                 <button class="articles_btn">Agregar al carrito</button>
             </article>
 
             <article class="Products__articles">
-                <img src="../Together/css/assets/Products/nikescott.jfif" alt="Scott" class="articles__img">
+                <img src="css/assets/Products/nikescott.jfif" alt="Scott" class="articles__img">
                 <h2 class="articles__title">Tenis N23</h2>
                 <p class="articles__price">500.00 USD</p>
                 <button class="articles_btn">Agregar al carrito</button>
             </article>
 
             <article class="Products__articles">
-                <img src="../Together/css/assets/Products/nikeB.jpg" alt="NikeB" class="articles__img">
+                <img src="css/assets/Products/nikeB.jpg" alt="NikeB" class="articles__img">
                 <h2 class="articles__title">Tenis N23</h2>
                 <p class="articles__price">500.00 USD</p>
                 <button class="articles_btn">Agregar al carrito</button>
