--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Commerce</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../Together/css/styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header class="header">
@@ -138,7 +138,7 @@
            
             <div class="cart__article">
                 <h2 class="cart__title">Carrito</h2>
-                <img class="cart__img" src="css/assets/Products/chamarra.jpg" alt="" />
+                <img class="cart__img" src="xx.css/assets/Products/chamarra.jpg" alt="" />
                 <p class="cart__price-size">$3,000.00</p>
                 <p class="cart__articlename">Chamarra</p>
                 <i class="cart__deleteIcon"><img src="css/assets/Iconos/borrar.png" class="delete-icon" /></i>
