New commit cards

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Commerce</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -14,14 +14,14 @@
        <nav class="header__nav">
             <i><img src="css/assets/Iconos/icons8-menú-30.png" alt="IconMenu" class="nav__icon"></i>
             <a href="index__login/index__login.html" class="nav__menu1">Sign-In</a>
-            <a href="#" class="nav__menu1">Login</a>
-            <a href="#" class="nav__menu1">Search</a>
-            <a href="#" class="nav__menu1">Contact</a>
+            <a href="" class="nav__menu1">Log-in</a>
+            <a href="" class="nav__menu1">Search</a>
+            <a href="" class="nav__menu1">Contact Us</a>
             <i><img src="css/assets/Iconos/icons8-nike-an-american-multinational-corporation---footwear,-apparel,-equipment,-accessories,-and-services-96.png" alt="iconMenu" class="nav__icon nav__icon--logo"></i>
-            <a href="#" class="nav__menu2">Categories</a>
-            <a href="#" class="nav__menu2">Offers</a>
-            <a href="#" class="nav__menu2">Historial</a>
-            <a href="#" class="nav__menu2">Market</a>
+            <a href="" class="nav__menu2">Categories</a>
+            <a href="" class="nav__menu2">Offers</a>
+            <a href="" class="nav__menu2">Historial</a>
+            <a href="" class="nav__menu2">Market</a>
             <i><img src="css/assets/Iconos/icons8-carrito-de-compras-64.png" alt="carrito" class="nav__icon"></i>
             </ul>  
         </nav>
